# frankpiv_controller

./: CMakeLists.txt  README.md  frankpiv_controller_plugin.xml  package.xml  pivot_controller_plugin.xml
cfg/: compliance_param.cfg  controller.yaml
config/: config.yml
include/frankpiv_controller/: pivot_controller.h
launch/: gazebo_empty_world.launch  pivoting_sim.launch  robot.launch  simulation.launch
launch/rqt/: supervise_pivoting.perspective
launch/rviz/: franka_description_with_marker.rviz
scripts/: interactive_marker.py  trajectory_generator.py
src/: pivot_controller.cpp
test/: CMakeLists.txt  frankpiv_controller_movements.cpp  main.cpp  sim_movement_test.py
test/cfg/: sim_movement_test.yaml
test/launch/: frankpiv_controller_movements.test  frankpiv_controller_test.test
