<?xml version="1.0"?>
<package format="2">
  <name>frankpiv_controller</name>
  <version>0.0.1</version>
  <description>The frankpiv_controller package</description>

  <maintainer email="peter_klausing@agdsn.me">Peter Klausing</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>gazebo_dev</build_depend>

  <build_export_depend>message_runtime</build_export_depend>

  <depend>gazebo_ros_control</depend>
  <depend>controller_interface</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>eigen_conversions</depend>
  <depend>franka_hw</depend>
  <depend>franka_gripper</depend>
  <depend>franka_gazebo</depend>
  <depend>pivot_control_messages_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>libfranka</depend>
  <depend>pluginlib</depend>
  <depend>realtime_tools</depend>
  <depend>roscpp</depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>franka_control</exec_depend>
  <exec_depend>franka_description</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>panda_moveit_config</exec_depend>
  <exec_depend>moveit_commander</exec_depend>
  <exec_depend>rospy</exec_depend>

  <export>
    <controller_interface plugin="${prefix}/frankpiv_controller_plugin.xml"/>
  </export>
</package>
